# pseudocolor

./: .gitignore  CMakeLists.txt  README.md
include/: InputParser.hpp
src/: pseudocolor.cpp
